--- a/styles/architect.css
+++ b/styles/architect.css
@@ -17,6 +17,9 @@
   cursor: pointer;
   border: 0;
 }
+.text-light-gray {
+  color:  #727272;
+}
 
 
  /* header styles */
@@ -61,8 +64,7 @@ margin: 0 auto;
   font-weight: 700;
   color: #131313;
 }
-.banner-description{
-  color: #131313;}
+
  
 .banner img{
   margin: 20px;
@@ -72,30 +74,12 @@ margin: 0 auto;
 
 
 
-/* responsive media quaries */
-@media  screen and (max-width: 576px) {
 
-  header{
-    padding: 20px;
-  }
-  nav{
-    flex-direction: column;
-  }
-  
-}
-/* medium devices */
-@media screen and (min-width:576px) and (max-width:960px) {
-  nav{
-    flex-direction: column;
-    padding: 50px;
-  }
-  
-}
 
 /* styles main */
 main{
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 70px auto;
 }
 /* teams style */
 .teams-container{
@@ -116,8 +100,8 @@ main{
 .teams-title{
   font-size: 2.8rem;
 }
-.teams-title .quick-list{
-  color: #727272;
+.teams-title{
+
   font-weight: 500;
 }
 .teams-title .text-features{
@@ -125,3 +109,38 @@ main{
   font-weight: 700;
 }
 
+
+
+
+
+
+
+
+
+
+/* responsive media quaries */
+@media  screen and (max-width: 576px) {
+
+  header{
+    padding: 20px;
+  }
+  nav,
+  .teams-container{
+    flex-direction: column;
+  }
+  .teams-img-container{
+    grid-template-columns: 1fr;
+  }
+  .teams-content{
+    padding-right: 20px;
+    padding-left: 20px;
+  
+}
+/* medium devices */
+@media screen and (min-width:576px) and (max-width:960px) {
+  nav, .teams-container{
+    flex-direction: column;
+    padding: 50px;
+  }
+  
+}
