--- a/styles/architect.css
+++ b/styles/architect.css
@@ -110,6 +110,53 @@ main{
   color: #FF900E;
   font-weight: 700;
 }
+/* features section style */
+.features{
+  margin-top: 130px;
+  display: flex;
+  gap: 100px;
+}
+.feature-content .card{
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+.features .section-title{
+  border-left: 5px solid #FF900E;
+padding-left: 20px;
+}
+
+.feature-img img{
+  height: 85%;
+  margin-left: 90px;
+}
+.ten-years-badge{
+  border-radius: 8px;
+background: #FF900E;
+color: #FFF;
+width: 342px;
+padding: 40px;
+text-align: center;
+position: relative;
+bottom: 100px;
+
+}
+.ten-years-badge h2{
+  font-size: 4rem;
+  margin: 0;
+
+}
+.ten-years-badge p{
+  font-size: 1.5rem;
+
+}
+
+
+
+
+
 
 /* fact section */
 .facts-card-container{
@@ -149,8 +196,19 @@ main{
     padding: 20px;
   }
   nav,
-  .teams-container{
+  .features,
+  .teams-container,
+  .facts-card-container,
+  .sponsors-img-container {
     flex-direction: column;
+  }
+  .feature-img img{
+    width: 90%;
+    margin-left: 0;
+  }
+  .ten-years-badge{
+    position: static;
+   max-width: 300px;
   }
   .teams-img-container{
     grid-template-columns: 1fr;
@@ -166,6 +224,9 @@ main{
   nav, .teams-container{
     flex-direction: column;
     padding: 50px;
+  }
+  .feature{
+    flex-direction: column;
   }
   
 }
