--- a/styles/architect.css
+++ b/styles/architect.css
@@ -218,6 +218,7 @@ bottom: 100px;
     padding: 20px;
   }
   nav,
+  .sponsor, .sponsor-img,
   .features,
   .teams-container,
   .facts-card-container,
@@ -239,6 +240,10 @@ bottom: 100px;
     padding-right: 20px;
     padding-left: 20px;
   
+}
+.sponsor-img{
+  margin: auto;
+  width: 25%
 }
 }
 /* medium devices */
